--- a/appsscript.json
+++ b/appsscript.json
@@ -30,7 +30,7 @@
   "addOns": {
     "common": {
       "name": "WhatsApp Catalog Management",
-      "logoUrl": "https://drive.google.com/uc?export=view&id=1OCRH4n83yWzM7Yi9peJ-4xzk-3b_L9Fa",
+      "logoUrl": "https://raw.githubusercontent.com/botiqo/whatsapp_catalog_listing_addon/master/assets/whatsapp_icon.svg",
       "useLocaleFromApp": true,
       "homepageTrigger": {
         "runFunction": "onHomepage"
@@ -51,11 +51,11 @@
   ],
   "dataStudio": {
     "name": "WhatsApp Catalog Management",
-    "logoUrl": "https://drive.google.com/uc?export=view&id=1OCRH4n83yWzM7Yi9peJ-4xzk-3b_L9Fa",
-    "company": "Your Company Name",
-    "companyUrl": "https://www.yourcompany.com",
-    "addonUrl": "https://github.com/yourusername/whatsapp-catalog-management",
-    "supportUrl": "https://github.com/yourusername/whatsapp-catalog-management/issues",
+    "logoUrl": "https://raw.githubusercontent.com/botiqo/whatsapp_catalog_listing_addon/master/assets/whatsapp_icon.svg",
+    "company": "Botiqo",
+    "companyUrl": "https://github.com/botiqo/whatsapp_catalog_listing_addon/tree/master",
+    "addonUrl": "https://github.com/botiqo/whatsapp_catalog_listing_addon/tree/master",
+    "supportUrl": "https://github.com/botiqo/whatsapp_catalog_listing_addon/issues",
     "description": "Manage your WhatsApp catalog efficiently with this add-on.",
     "sources": [
       "GOOGLE_SHEETS"
